@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-05-2006 fixed: music nav, when the language is changed, the shares are displayed in the previous language
  - 18-05-2006 changed: lowered protocol level of cddb to 5 again (none utf8 queries to freedb)
  - 18-05-2006 added: masterlock to AdvancedSettings.xml! Check XBMC Wiki for more informations!
  - 18-05-2006 removed: Masterlock Max. Retries from GUI ! Default Max. Value is: 3!
